# mango_chainsaw

./: .gitignore  Cargo.toml  README.md
.github/: CODEOWNERS
.github/workflows/: autoapprove.yml  codeowners-merge.yml
cmd/: main.rs
firedbg/: target.json
old/: db.rs  delete.rs  namespace.rs  query.rs  tests.rs
src/: api.rs  bucket.rs  common.rs  config.rs  db.rs  delete.rs  error.rs  errors.rs  insert.rs  item.rs  label.rs  lib.rs  mango.rs  metadata.rs  mod.rs  namespace.rs  object.rs  query.rs  shard.rs  store.rs  storeableitem.rs  tests.rs  traits.rs
src/___/: db.rs  object.rs
src/___/api/: v3.rs
src/api/: blobs.rs  documentation.rs  labels.rs  mod.rs  namespaces.rs  response.rs  server.rs  v1.rs  v2.rs  v3.rs
src/query/: cswap.rs  delete.rs  error.rs  execute.rs  find.rs  get.rs  insert.rs  mod.rs  transaction.rs
src/tests/: db.rs  item.rs  mod.rs  namespace.rs  storeableitem.rs
