[package]
name = "mango_chainsaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmangochainsaw"
path = "src/lib.rs"

# [[bin]]
# name = "mangos"
# path = "cmd/main.rs"

[dependencies]
bytes = { version = "1.5.0", features = ["serde"] }
log = "0.4.20"
rayon = "1.8.0"
serde = "1.0"
serde_derive = "1.0"
sled = "0.34.7"
tokio = { version = "1.33.0", features = ["full"] }
simplelog = "0.12.1"
clap = { version = "4.4.7", features = ["derive"] }
figment = { version = "0.10.11", features = ["json", "yaml", "env"] }
serde_json = "1.0"
uuid = { version = "1.5.0", features = ["v3"] }
flexbuffers = "2.0.0"
anyhow = { version = "1.0.75", features = ["backtrace"] }
internment = "0.7.4"
error-stack = { version = "0.4.1", features = ["anyhow"] }
thiserror = "1.0.50"
futures = "0.3.29"


[dev-dependencies]
tempfile = "3.8.1"
