[package]
name = "mango_chainsaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libmangochainsaw"
path = "src/lib.rs"

[dependencies]
anyhow = { version = "1.0.77", features = ["backtrace"] }
bytes = { version = "1.5.0", features = ["serde"] }
flexbuffers = "2.0.0"
log = "0.4.20"
serde = "1.0"
serde_derive = "1.0"
sled = { version = "0.34.7", features = ["compression"] }
thiserror = "1.0.52"

[dev-dependencies]
simplelog = "0.12.1"
walkdir = "2.4.0"
